feat: Adição do MapStruct.