@@ -3,9 +3,9 @@ package br.edu.ifpb.sr.dac.demo.service;
 import br.edu.ifpb.sr.dac.demo.dao.UsuarioDao;
 import br.edu.ifpb.sr.dac.demo.dto.GetUsuariosDTO;
 import br.edu.ifpb.sr.dac.demo.dto.PostUsuarioDTO;
+import br.edu.ifpb.sr.dac.demo.dto.UsuarioMapper;
 import br.edu.ifpb.sr.dac.demo.model.Usuario;
 import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -15,24 +15,24 @@ import java.util.stream.Collectors;
 public class UsuarioServiceImpl implements UsuarioService {
 
     private final UsuarioDao usuarioDao;
-    public UsuarioServiceImpl (UsuarioDao usuarioDao){
+    private final UsuarioMapper usuarioMapper;
+    public UsuarioServiceImpl (UsuarioDao usuarioDao, UsuarioMapper usuarioMapper){
         this.usuarioDao = usuarioDao;
+        this.usuarioMapper = usuarioMapper;
     }
 
     @Override
     @Transactional
     public void save(PostUsuarioDTO dto) {
-        Usuario usuario = new Usuario();
-        usuario.setNome(dto.nome());
-        usuario.setSenha(dto.senha());
-        usuario.setUsername(dto.username());
+        Usuario usuario = this.usuarioMapper.toUsuarioEntity(dto);
         this.usuarioDao.save(usuario);
     }
 
     @Override
     public List<GetUsuariosDTO> findAll() {
-        return this.usuarioDao.findAll().stream()
+        return this.usuarioDao.findAll()
+                .stream()
                 .map(usuario -> new GetUsuariosDTO(usuario.getId(), usuario.getNome(), usuario.getUsername()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
